--- a/css/utilities/helpers.css
+++ b/css/utilities/helpers.css
@@ -61,10 +61,6 @@
     grid-template-rows: 1fr;
 }
 
-.u-reveal.is-open>* {
-    overflow: visible;
-}
-
 .u-reveal>* {
     overflow: hidden;
 }
